// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  class="skeleton emotion-0"
  style="width: 100%; height: 32px;"
/>
`;

exports[`Render shaperound - value[0] 1`] = `
.emotion-0 {
  border-radius: 16px;
}

<div
  class="skeleton emotion-0"
  style="width: 100%; height: 32px;"
/>
`;

exports[`Render sizedefault - value[0] 1`] = `
<div
  class="skeleton emotion-0"
  style="width: 100%; height: 32px;"
/>
`;

exports[`Render sizelarge - value[0] 1`] = `
<div
  class="skeleton emotion-0"
  style="width: 100%; height: 40px;"
/>
`;

exports[`Render sizesmall - value[0] 1`] = `
<div
  class="skeleton emotion-0"
  style="width: 100%; height: 24px;"
/>
`;
